--- a/sky-pojo/pom.xml
+++ b/sky-pojo/pom.xml
@@ -23,5 +23,10 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.24</version>
+        </dependency>
     </dependencies>
 </project>
